fixed gap issue and tweaked dimensions of featured flowers boxes

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@ body {
 
 .featured-flowers-img-container {
     display: flex;
-    /* gap: 24px; */
+    /* gap: 10px; */
     justify-content: space-between;
     align-items: center;
     margin: auto;
@@ -107,14 +107,14 @@ body {
 }
 
 .featured-flowers-img-container img {
-    width: 200px;
+    width: 250px;
 }
 
 .featured-flower-img-1 {
-    width: 300px;
-    height: 400px;
+    width: 390px;
+    height: 470px;
     background: rgba(167, 33, 98, 0.15);
-    border-radius: 150px 150px 0 0;
+    border-radius: 195px 195px 0 0;
     display: flex;
     justify-content: center;
     align-items: end;
@@ -122,10 +122,10 @@ body {
 }
 
 .featured-flower-img-2 {
-    width: 300px;
-    height: 400px;
+    width: 390px;
+    height: 470px;
     background: rgba(5, 151, 160, 0.15);
-    border-radius: 150px 150px 0 0;
+    border-radius: 195px 195px 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -133,10 +133,10 @@ body {
 }
 
 .featured-flower-img-3 {
-    width: 300px;
-    height: 400px;
+    width: 390px;
+    height: 470px;
     background: rgba(71, 125, 17, 0.15);
-    border-radius: 150px 150px 0 0;
+    border-radius: 195px 195px 0 0;
     display: flex;
     justify-content: center;
     align-items: end;
